syntax = "proto3";

// import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package blogApp;

service BlogCrudService {
    rpc CreateBlog (InsertBlogRequest) returns (InsertBlogResponse) {};
}

message InsertBlogResponse {
    bool isSuccessful = 1;
}

message InsertBlogRequest {
    int32 authorId = 1;
    string blogTitle = 2;
    string blogContent = 3;
    google.protobuf.Timestamp creationTime = 4;
}